1. By default, scripts start two servers 2. By default, Max perm size is set as 350m for lead and servers