@@ -115,7 +115,8 @@ if [ "$HOSTLIST" = "" ]; then
       if [ -f "${SPARK_CONF_DIR}/servers" ]; then
         HOSTLIST=`cat "${SPARK_CONF_DIR}/servers"`
       else
-        HOSTLIST=localhost
+        # Start two servers by default.
+        HOSTLIST=$'localhost\nlocalhost'
       fi
     else
       HOSTLIST=`cat "${SNAPPY_SERVERS}"`
@@ -167,6 +168,10 @@ for slave in `echo "$HOSTLIST"|sed  "s/#.*$//;/^$/d"`; do
     # Set a default locator if not already set.
     if [ -z "$(echo  $args $"${@// /\\ }" | grep '[-]locators=')" -a "${componentType}" != "locator"  ]; then
       args="${args} -locators="$(hostname)"[10334]"
+    fi
+    # Set MaxPermSize if not already set.
+    if [ -z "$(echo  $args $"${@// /\\ }" | grep 'XX:MaxPermSize=')" -a "${componentType}" != "locator"  ]; then
+      args="${args} -J-XX:MaxPermSize=350m"
     fi
   else
     args="${dirparam}"
